shared-gw/shared-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: foo1
  labels:
    app-team: "foo"
---
apiVersion: v1
kind: Namespace
metadata:
  name: bar1
  labels:
    app-team: "bar"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: infra-ns
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http-foo
    hostname: "foo.chilm.com"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app-team: "foo"
  - name: http-bar
    hostname: "bar.chilm.com"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app-team: "bar"
